fixed description blurred on herosection frontned

--- a/src/app/(frontend)/global.css
+++ b/src/app/(frontend)/global.css
@@ -123,7 +123,7 @@ textarea::placeholder {
 
 
 
-  p {
+  .msc p {
     color: #4a5568;
     font-size: 1.8rem;
     line-height: 1.8;
